--- a/ingress.yaml
+++ b/ingress.yaml
@@ -21,6 +21,6 @@ spec:
         path: /
         backend:
           service:
-            name: nginx-init-srv
+            name: mysql-srv
             port:
-              number: 80
+              number: 3306
